--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "formik": "^2.1.4"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
@@ -34,6 +35,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^4.4.1",
     "cross-env": "^5.1.4",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
@@ -47,20 +49,18 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^1.1.4",
+    "reactstrap": "^8.4.1",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-url": "^1.4.0",
+    "yup": "^0.28.1"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "bootstrap": "^4.4.1",
-    "formik": "^2.1.4",
-    "reactstrap": "^8.4.1"
-  }
+  "dependencies": {}
 }
